<resources>
    <string name="app_name">Leaders Rating</string>
    <string name="large_text">"Material is the metaphor.\n\n"</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email-Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="work_name">Work name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="register">Register</string>
    <string name="first_last_name">first last name</string>
    <string name="image_of_user">image of user</string>
    <string name="mobile">mobile</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="basic_details">Basic Details</string>
    <string name="education_details">Education Details</string>
    <string name="school">School</string>
    <string name="degree">Degree</string>
    <string name="specialization">Specialization</string>
    <string name="place">Place</string>
    <string name="extra">Extra</string>
    <string name="add">Add</string>
    <string name="experience_details">Experience Details</string>
    <string name="skills">Skills</string>
    <string name="education_1">Education #1</string>
    <string name="education_2">Education # 2</string>
    <string name="education_3">Education # 3</string>
    <string name="experience_1">Experience # 1</string>
    <string name="organization_company">Organization/Company</string>
    <string name="location">Location</string>
    <string name="current_job">Current Job :</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="worked_to">Worked To :</string>
    <string name="post">Post</string>
    <string name="worked_from">Worked From :</string>
    <string name="experience_2">Experience # 2</string>
    <string name="experience_3">Experience # 3</string>
    <string name="delete">Delete</string>
    <string name="processing">Processing...</string>
    <string name="attended_from">Attended from</string>
    <string name="attended_to">Attended to</string>
    <string name="title_activity_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username_or_email_id">Username or Email-id</string>
    <string name="login">Login</string>
    <string name="test_text">test text</string>
    <string name="no_skills_added">No Skills Added..</string>
    <string name="tap_to_change">Tap to Change</string>
    <string name="facebook_app_id">1611694899151267</string>
    <string name="my_friends">My Friends</string>
    <string name="facebook_friends">Facebook Friends</string>
    <string name="invite_selected">Invite Selected</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="title_activity_activity_main">ActivityMain</string>
    <string name="title_activity_activity_temp">ActivityTemp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_activity_profile">ActivityProfile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="search">search</string>
    <string name="done">Done!</string>
    <string name="overall_ratings">OverAll Ratings :</string>
    <string name="all_comments">All Comments :</string>

    <string name="title_activity_activity_profile1">ActivityProfile1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rate">Rate</string>
    <string name="comment">Comment</string>
    <string name="my_profile">My Profile</string>
    <string name="add_user">Add User</string>
    <string name="advance_search">Advance Search</string>
</resources>
