<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.matictechnology.leadersrating.activity.ActivityRegister">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:gravity="left"
                android:src="@drawable/leader1"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_marginTop="60dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.ActivityRegister">

        <ScrollView
            android:layout_above="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_name"
                    android:hint="@string/name"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent">
                </com.rengwuxian.materialedittext.MaterialEditText>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:inputType="phone"
                    android:layout_below="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_phone"
                    android:hint="@string/phone_number"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/reg_email"
                    android:hint="@string/email_id"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_username"
                    android:hint="@string/username"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_username"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_password"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:id="@+id/reg_cpassword"
                    android:hint="@string/confirm_password"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <Spinner
                    android:layout_below="@+id/reg_cpassword"
                    android:id="@+id/reg_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_work_name"
                    android:hint="@string/work_name"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_work_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_address"
                    android:hint="@string/address"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_below="@+id/reg_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_country"
                    android:hint="@string/country"
                    android:textAlignment="center"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="?colorAccent"/>

            </RelativeLayout>
        </ScrollView>

        <Button
            android:layout_alignParentBottom="true"
            android:text="@string/register"
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>


