<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:clickable="true"
                android:src="@drawable/nav_bakground"
                android:id="@+id/profile_edit_cover_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <LinearLayout
                android:gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#ffffff"
                    android:text="@string/tap_to_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/falana_dhimkana"
                android:layout_marginTop="150dp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/profile_edit_profile_pic"
                    android:clickable="true"
                    android:src="@drawable/user"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />
                <TextView
                    android:text="@string/tap_to_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/falana_dhimkana"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical">




                <TextView
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_details"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/profile_edit_name"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        app:met_floatingLabel="highlight"
                        app:met_maxCharacters="20"
                        app:met_primaryColor="?colorAccent"
                        app:met_singleLineEllipsis="true" />

                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_phone"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="10"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_email"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="15"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_username"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="10"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_password"
                    android:inputType="textPassword"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="20"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_work_name"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/work_name"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="10"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <Spinner
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:id="@+id/profile_edit_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_address"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="10"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profile_edit_country"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="10"
                    app:met_primaryColor="?colorAccent"
                    app:met_singleLineEllipsis="true" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>